code for indexing, app

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,2 +1,2 @@
 indexPath = "full-index-sentences"
-clusterPath = "clusters.txt"
+annotatedText = "/Users/afader/Projects/dictionary-builder/annotations-brown-100.json"
