--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,2 +1,3 @@
 indexPath = "full-index-sentences"
-annotatedText = "/Users/afader/Downloads/annotations-brown.json"
+annotatedText = "/Users/afader/Downloads/annotations-brown-100"
+sentencePerDoc = true
