--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,7 +15,8 @@
     "gulp-util": "^3.0.2",
     "react": "^0.12.2",
     "reactify": "^1.0.0",
-    "syrup": "0.0.16"
+    "syrup": "0.0.16",
+    "xhr": "^2.0.1"
   },
   "browserify": {
     "transform": [
