--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,18 @@
 indexPath = "full-index-sentences"
 annotatedText = "/Users/afader/Downloads/annotations-brown-100"
 sentencePerDoc = true
+
+corpus = {
+  source = datastore
+  name = private
+  item = {
+    group = org.allenai.scholar.corpora
+    name = AclAnnotated
+    version = 1
+  }
+}
+
+//corpus = {
+//  source = file
+//  path = /Users/afader/Downloads/annotations-brown-1000.json
+//}
