--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,17 +2,23 @@ indexPath = "full-index-sentences"
 annotatedText = "/Users/afader/Downloads/annotations-brown-100"
 sentencePerDoc = true
 
-corpus = {
-  source = datastore
-  name = private
-  item = {
-    group = org.allenai.scholar.corpora
-    name = AclAnnotated
-    version = 1
-  }
+index = {
+  location = file
+  path = full-index-sentences
 }
 
-//corpus = {
-//  source = file
-//  path = /Users/afader/Downloads/annotations-brown-1000.json
-//}
+buildIndex = {
+  input = {
+    location = datastore
+    item = {
+      datastore = private
+      group = org.allenai.scholar.corpora
+      name = AclAnnotated
+      version = 1
+    }
+  }
+  output = {
+    location = file
+    path = full-index-sentences2
+  }
+}
