--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,11 @@
-indexPath = "full-index-sentences"
-annotatedText = "/Users/afader/Downloads/annotations-brown-100"
-sentencePerDoc = true
-
 index = {
   location = file
   path = full-index-sentences
 }
 
 buildIndex = {
+  chunkSize = 100
+  sentencePerDoc = true
   input = {
     location = datastore
     item = {
@@ -16,9 +14,12 @@ buildIndex = {
       name = AclAnnotated
       version = 1
     }
+//    location = file
+//    path = /Users/afader/Downloads/AclAnnotated
+    fileName = annotated-text-small.json
   }
   output = {
     location = file
-    path = full-index-sentences2
+    path = full-index-sentences
   }
 }
