--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,13 @@
 index = {
   location = file
-  path = full-index-sentences
+  path = full-index-temp
 }
 
 buildIndex = {
   chunkSize = 100
   sentencePerDoc = true
   input = {
+    fileName = annotated-text.json
     location = datastore
     item = {
       datastore = private
@@ -14,9 +15,6 @@ buildIndex = {
       name = AclAnnotated
       version = 1
     }
-//    location = file
-//    path = /Users/afader/Downloads/AclAnnotated
-    fileName = annotated-text-small.json
   }
   output = {
     location = file
