added datastore ref

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,11 @@
 index = {
-  location = file
-  path = full-index-temp
+  location = datastore
+  item = {
+    datastore = private
+    group = org.allenai.dictionary.indexes
+    name = AclSentenceDocs
+    version = 1
+  }
 }
 
 buildIndex = {
