--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,10 +10,12 @@
   "author": "tonyf",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^3.3.2",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.1",
     "gulp-util": "^3.0.2",
     "react": "^0.12.2",
+    "react-bootstrap": "^0.13.3",
     "reactify": "^1.0.0",
     "syrup": "0.0.16",
     "xhr": "^2.0.1"
