cleanup, test fixes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,12 @@
 index = {
-  location = file
-  path = test-index
-//  location = datastore
-//  item = {
-//    datastore = private
-//    group = org.allenai.dictionary.indexes
-//    name = AclSentenceDocs
-//    version = 1
-//  }
+  location = datastore
+  item = {
+    type = directory
+    datastore = private
+    group = org.allenai.dictionary.indexes
+    name = AclSentenceDocs
+    version = 1
+  }
 }
 
 CreateIndex = {
