upgraded index version

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,8 +4,8 @@ index = {
     type = directory
     datastore = private
     group = org.allenai.dictionary.indexes
-    name = AclSentenceDocs
-    version = 1
+    name = AclDocs
+    version = 3
   }
 }
 
