made webapp port configurable

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,14 @@
-index = {
-  location = datastore
-  item = {
-    type = directory
-    datastore = private
-    group = org.allenai.dictionary.indexes
-    name = AclDocs
-    version = 3
+DictionaryToolWebapp = {
+  port = 8080
+  index = {
+    location = datastore
+    item = {
+      type = directory
+      datastore = private
+      group = org.allenai.dictionary.indexes
+      name = AclDocs
+      version = 3
+    }
   }
 }
 
