--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,28 +23,27 @@ DictionaryToolWebapp = {
         name = BioTextDocs
         version = 2
       }
+    }, {
+      name = AclSentenceDocs
+      location = datastore
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = AclSentenceDocs
+        version = 1
+      }
+    }, {
+      name = WikiAnswersSmall
+      location = datastore
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WikiAnswersSmall
+        version = 1
+      }
     }
-//    , {
-//      name = AclSentenceDocs
-//      location = datastore
-//      item = {
-//        type = directory
-//        datastore = private
-//        group = org.allenai.dictionary.indexes
-//        name = AclSentenceDocs
-//        version = 1
-//      }
-//    }, {
-//      name = WikiAnswersSmall
-//      location = datastore
-//      item = {
-//        type = directory
-//        datastore = private
-//        group = org.allenai.dictionary.indexes
-//        name = WikiAnswersSmall
-//        version = 1
-//      }
-//    }
   ]
 }
 
