--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -43,6 +43,16 @@ DictionaryToolWebapp = {
         name = WikiAnswersSmall
         version = 1
       }
+    }, {
+      name = Barrons
+      location = datastore
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = Barrons
+        version = 1
+      }
     }
   ]
 }
