Removes CreateIndex configuration, and adds WebSentences corpus

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -53,32 +53,16 @@ DictionaryToolWebapp = {
         name = Barrons
         version = 1
       }
+    }, {
+      name = WebSentences
+      location = datastore
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WebSentences
+        version = 1
+      }
     }
   ]
-}
-
-CreateIndex = {
-  indexDir = test-index
-  batchSize = 1000
-  clusters = {
-    location = datastore
-    item = {
-      type = file
-      datastore = private
-      group = org.allenai.scholar
-      name = acl-brown-clusters-500.txt
-      version = 1
-    }
-  }
-  text = {
-    format = directory
-    location = datastore
-    item = {
-      type = directory
-      datastore = private
-      group = org.allenai.corpora.acl
-      name = RawTextSample
-      version = 1
-    }
-  }
 }
