Adds CiteseerQueryLog corpus

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -63,6 +63,16 @@ DictionaryToolWebapp = {
         name = WebSentences
         version = 1
       }
+    }, {
+      name = CiteseerQueryLog
+      location = datastore
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = CiteseerQueryLog
+        version = 1
+      }
     }
   ]
 }
