Give it the key it needs to deploy

--- a/shippable.yml
+++ b/shippable.yml
@@ -15,4 +15,5 @@ after_script:
   - mkdir -p shippable/testresults
   - cp tools/*/target/test-reports/*.xml shippable/testresults
 after_success:
+  - export AWS_PEM_FILE=~/.ssh/id_rsa
   - sbt "deploy prod"
