Added some query suggestion config options

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -102,3 +102,51 @@ Tablestore = {
     password = "OnlyGoodParts"
   }
 }
+
+QuerySuggester = {
+  narrow = {
+    prefixSize = 3
+    suffixSize = 3
+    suggestWord = true
+    suggestPos = true
+    clusterSizes = [4, 6]
+  }
+  broaden = {
+    suggestWord = true
+    suggestPos = true
+    clusterSizes = [4, 6]
+    suggestAddWords = true
+    maxRemoves = 2
+    generalizationPruning = true
+  }
+  pruneOperatorsIfMoreMatchesThan = 1000
+  pruneOperatorsIfLessThan = 1
+  numToReturn = 10
+  percentUnlabelled = 0.3
+}
+
+CreateIndex = {
+  indexDir = test-index
+  batchSize = 1000
+  clusters = {
+    location = datastore
+    item = {
+      type = file
+      datastore = private
+      group = org.allenai.scholar
+      name = acl-brown-clusters-500.txt
+      version = 1
+    }
+  }
+  text = {
+    format = directory
+    location = datastore
+    item = {
+      type = directory
+      datastore = private
+      group = org.allenai.corpora.acl
+      name = RawTextSample
+      version = 1
+    }
+  }
+}
