--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -72,6 +72,15 @@ DictionaryToolWebapp = {
         group = org.allenai.dictionary.indexes
         name = CiteseerQueryLog
         version = 1
+      }, {
+      name = Citeseer20k
+      location = datastore
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = Citeseer20k
+        version = 1
       }
     }
   ]
