Adds dependencies on SQL and a settings table in the database

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -86,3 +86,11 @@ DictionaryToolWebapp = {
     }
   ]
 }
+
+Tablestore = {
+  db = {
+    url = "jdbc:postgresql://localhost:5432/tablestore"
+    user = "okcorpus"
+    password = "atleasteight"
+  }
+}
