--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,7 +17,7 @@ DictionaryToolWebapp = {
     }, {
       name = BioTextDocs
       location = datastore
-      desription = "A concatenation of the Aristo corpora. This is a small corpus."
+      description = "A concatenation of the Aristo corpora. This is a small corpus."
       item = {
         type = directory
         datastore = private
