Added new corpus

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -59,6 +59,17 @@ DictionaryToolWebapp = {
         version = 1
       }
     }, {
+      name = SimplewikiScienceSentences
+      location = datastore
+      description = "A collection of science-related sentences from Simple Wikipedia"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = SimplewikiScienceSentences
+        version = 1
+      }
+   }, {
       name = CiteseerQueryLog
       location = datastore
       description = "The query log from CiteSeer"
