Fix database configuration for local running

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -86,8 +86,8 @@ DictionaryToolWebapp = {
 
 Tablestore = {
   db = {
-    url = "jdbc:postgresql://localhost:5432/tablestore"
-    user = "okcorpus"
-    password = "atleasteight"
+    url = "jdbc:postgresql://localhost:5432/okcorpus"
+    //user = "okcorpus"
+    //password = "atleasteight"
   }
 }
