Adds a dev database in the cloud

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -97,8 +97,8 @@ DictionaryToolWebapp = {
 
 Tablestore = {
   db = {
-    url = "jdbc:postgresql://localhost:5432/okcorpus"
-    //user = "okcorpus"
-    //password = "atleasteight"
+    url = "jdbc:postgresql://okcorpus-dev.civm9kvdku8h.us-west-2.rds.amazonaws.com:5432/okcorpus"
+    user = "okcorpus"
+    password = "OnlyGoodParts"
   }
 }
