--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -121,7 +121,10 @@ QuerySuggester = {
   }
   pruneOperatorsIfMoreMatchesThan = 1000
   pruneOperatorsIfLessThan = 1
-  numToReturn = 11
+  minMaxOpReuse = 3
+  maxOpReuseReturn = 4
+  maxOpReusePercentOfBeamSize = 0.35
+  numToSuggest = 11
   percentUnlabelled = 0.4
 }
 
