Adds SetRepeatedToken op

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -109,6 +109,7 @@ QuerySuggester = {
     suffixSize = 3
     suggestWord = true
     suggestPos = true
+    suggestSetRepeatedOp = true
     clusterSizes = [4, 6]
   }
   broaden = {
@@ -119,6 +120,7 @@ QuerySuggester = {
     maxRemoves = 2
     generalizationPruning = true
   }
+  maxUnlabelledBiasCorrection = 100
   pruneOperatorsIfMoreMatchesThan = 1000
   pruneOperatorsIfLessThan = 1
   minMaxOpReuse = 3
