--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -39,7 +39,7 @@ DictionaryToolWebapp = {
     }, {
       name = Barrons
       location = datastore
-      description = "Barron's study guide. This is a very small copus."
+      description = "Barron's study guide. This is a very small corpus."
       item = {
         type = directory
         datastore = private
