Adds the CK12 corpus

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -81,6 +81,17 @@ DictionaryToolWebapp = {
         version = 1
       }
    }, {
+      name = CK12
+      location = datastore
+      description = "CK-12 Biology, CK-12 Biology Concepts, CK-12 Life Science For Middle School, and CK-12 Life Science Concepts for Middle School"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = CK12
+        version = 1
+      }
+   }, {
       name = Citeseer20k
       location = datastore
       description = "A random sample of 20k CiteSeer documents"
