--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "build": "gulp build",
-    "watch": "gulp watch"
+    "watch": "gulp watch --color"
   },
   "author": "tonyf",
   "license": "ISC",
