--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -137,6 +137,7 @@ QuerySuggester = {
   maxOpReusePercentOfBeamSize = 0.35
   numToSuggest = 11
   percentUnlabelled = 0.4
+  timeoutInSeconds = 60 s
 }
 
 spray.can {
