--- a/src/main/resources/all-corpora.conf
+++ b/src/main/resources/all-corpora.conf
@@ -1,5 +1,3 @@
-akka.loglevel = DEBUG
-
 DictionaryToolWebapp = {
   port = 8080
   indices = [
@@ -13,6 +11,17 @@ DictionaryToolWebapp = {
         group = org.allenai.dictionary.indexes
         name = AclDocs
         version = 4
+      }
+    }, {
+      name = WikiAnswersSmall
+      location = datastore
+      description = "5% of the questions from the WikiAnswers corpus"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WikiAnswersSmall
+        version = 2
       }
     }, {
       name = Barrons
@@ -58,14 +67,17 @@ DictionaryToolWebapp = {
         name = CK12
         version = 2
       }
+    }, {
+      name = Citeseer20k
+      location = datastore
+      description = "A random sample of 20k CiteSeer documents"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = Citeseer20k
+        version = 2
+      }
     }
   ]
-}
-
-Tablestore = {
-  db = {
-    url = "jdbc:postgresql://okcorpus-dev.civm9kvdku8h.us-west-2.rds.amazonaws.com:5432/okcorpus"
-    user = "okcorpus"
-    password = "OnlyGoodParts"
-  }
 }
