Improve generalizations with repetetions and disjunctions

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -125,6 +125,7 @@ QuerySuggester = {
   broaden = {
     suggestWord = true
     suggestPos = true
+    createDisjunctions = true
   }
   maxUnlabelledBiasCorrection = 100
   pruneOperatorsIfMoreMatchesThan = 1000
