clean up generalizing queries

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -126,6 +126,7 @@ QuerySuggester = {
     suggestWord = true
     suggestPos = true
     createDisjunctions = true
+    wordPOSSampleSize = 200
   }
   maxUnlabelledBiasCorrection = 100
   pruneOperatorsIfMoreMatchesThan = 1000
