Get similar phrases from the Scala server

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -69,3 +69,13 @@ Tablestore = {
     password = "OnlyGoodParts"
   }
 }
+
+SimilarPhrasesSearcher = {
+  vectors = {
+    type = file
+    datastore = public
+    group = org.allenai.okcorpus
+    name = citeseer-ten-percent.3.mc100.bin
+    version = 1
+  }
+}
