Format and fix in SimilarPhraseMatchTracker.scala

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -74,6 +74,7 @@ QuerySuggester = {
   narrow = {
     prefixSize = 3
     suffixSize = 3
+    minSimilarityDifference = 5
     suggestWord = true
     suggestPos = true
     suggestSetRepeatedOp = true
