--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,34 +4,17 @@ DictionaryToolWebapp = {
   port = 8080
   indices = [
     {
-      name = Barrons
-      location = file
-      path = /Users/satwantrana/codes/ai2/okcorpus/test/barrons/
-      description = "Barron's study guide. This is a very small corpus."
-//      item = {
-//        type = directory
-//        datastore = private
-//        group = org.allenai.dictionary.indexes
-//        name = Barrons
-//        version = 1
-//      }
-//      item = {
-//        type = file
-//        path = /Users/satwantrana/codes/ai2/okcorpus/test/results/
-//      }
+      name = Citeseer20k
+      location = datastore
+      description = "A random sample of 20k CiteSeer documents"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = Citeseer20k
+        version = 3
+      }
     }
-//      , {
-//      name = WebSentences
-//      location = datastore
-//      description = "Sumithra's web sentences"
-//      item = {
-//        type = directory
-//        datastore = private
-//        group = org.allenai.dictionary.indexes
-//        name = WebSentences
-//        version = 1
-//      }
-//    }
   ]
 }
 
