--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,10 +11,14 @@
   "author": "tonyf",
   "license": "ISC",
   "devDependencies": {
+    "babel": "4.3.0",
+    "babel-core": "4.7.16",
+    "babelify": "5.0.4",
     "bootstrap": "3.3.2",
     "gulp": "3.8.10",
-    "react": "0.12.2",
+    "react": "0.13.2",
     "react-bootstrap": "0.13.3",
+    "react-router": "0.13.3",
     "syrup": "0.1.4",
     "xhr": "2.0.1"
   }
