--- a/src/main/resources/all-corpora.conf
+++ b/src/main/resources/all-corpora.conf
@@ -57,6 +57,17 @@ DictionaryToolWebapp = {
         version = 3
       }
     }, {
+      name = SimpleWikipedia
+      location = datastore
+      description = "SimpleWikipedia, from a dump on 2015-06-09. Some articles may have gotten lost in the extraction process."
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = SimpleWikipedia
+        version = 1
+      }
+    }, {
       name = Citeseer20k
       location = datastore
       description = "A random sample of 20k CiteSeer documents"
