--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,7 +15,10 @@
     "babel-core": "4.7.16",
     "babelify": "5.0.4",
     "bootstrap": "3.3.2",
+    "flux": "^2.0.1",
     "gulp": "3.8.10",
+    "keymirror": "~0.1.0",
+    "object-assign": "^1.0.0",
     "react": "0.13.2",
     "react-bootstrap": "0.13.3",
     "react-router": "0.13.3",
