Added latest AclDocs

--- a/src/main/resources/all-corpora.conf
+++ b/src/main/resources/all-corpora.conf
@@ -4,13 +4,13 @@ DictionaryToolWebapp = {
     {
       name = AclDocs
       location = datastore
-      description = "All the ACL papers (about 20k)"
+      description = "All the ACL papers (about 20k). Indexed in memory or Saruman."
       item = {
         type = directory
         datastore = private
         group = org.allenai.dictionary.indexes
         name = AclDocs
-        version = 5
+        version = 6
       }
     }, {
       name = WikiAnswersSmall
