Two corpora for testing

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,15 +4,26 @@ DictionaryToolWebapp = {
   port = 8080
   indices = [
     {
-      name = Citeseer20k
+      name = SimpleWikipedia
       location = datastore
-      description = "A random sample of 20k CiteSeer documents"
+      description = "SimpleWikipedia, from a dump on 2015-06-09. Some articles may have gotten lost in the extraction process."
       item = {
         type = directory
         datastore = private
         group = org.allenai.dictionary.indexes
-        name = Citeseer20k
-        version = 3
+        name = SimpleWikipedia
+        version = 1
+      }
+    }, {
+      name = Barrons
+      location = datastore
+      description = "Barron's study guide. This is a very small corpus."
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = Barrons
+        version = 2
       }
     }
   ]
