Saves patterns on the server

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -31,9 +31,9 @@ DictionaryToolWebapp = {
 
 Tablestore = {
   db = {
-    url = "jdbc:postgresql://okcorpus-dev.civm9kvdku8h.us-west-2.rds.amazonaws.com:5432/okcorpus"
-    user = "okcorpus"
-    password = "OnlyGoodParts"
+    url = "jdbc:postgresql://localhost:5432/okcorpus"
+    user = "dirkg"
+    //password = "OnlyGoodParts"
   }
 }
 
