Incorporated Sumatra's comments on PR #183
https://github.com/allenai/okcorpus/pull/183

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -63,7 +63,7 @@ QuerySuggester = {
   timeoutInSeconds = 55 s
 }
 
-Word2vecPhrasesSearcher = {
+word2vecPhrasesSearcher = {
   vectors = {
     // word2vec embedding (300 dim) bin file
     type = file
@@ -75,7 +75,7 @@ Word2vecPhrasesSearcher = {
   format = "binary"
 }
 
-PMIPhrasesSearcher = {
+pmiPhrasesSearcher = {
   vectors = {
     // function PPMI SVD embedding (300 dim) text file
     type = file
@@ -87,7 +87,7 @@ PMIPhrasesSearcher = {
   format= "text"
 }
 
-CombinationPhraseSearcher = {
+combinationPhraseSearcher = {
   // combinationStrategy can take values from [sum, average, min, max]
   // default is "average"
   combinationStrategy = "average"
