PR review changes round 2 done

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -73,6 +73,7 @@ word2vecPhrasesSearcher = {
     version = 1
   }
   format = "binary"
+  embeddingSize = 300
 }
 
 pmiPhrasesSearcher = {
@@ -85,6 +86,7 @@ pmiPhrasesSearcher = {
     version = 1
   }
   format= "text"
+  embeddingSize = 300
 }
 
 combinationPhraseSearcher = {
