Use Waterloo filtered corpus indices for public demo, add to all-corpora config. Make them sorted for display in CorpusSelector.

--- a/src/main/resources/all-corpora.conf
+++ b/src/main/resources/all-corpora.conf
@@ -78,6 +78,90 @@ DictionaryToolWebapp = {
         name = Citeseer20k
         version = 3
       }
+    },
+    {
+      name = "Web Corpus 1"
+      location = datastore
+      description = "A collection of ~1.5 million sentences from web documents skewed towards elementary science topics"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WaterlooFiltered
+        version = 1
+      }
+    },
+    {
+      name = "Web Corpus 2"
+      location = datastore
+      description = "A collection of ~1.1 million sentences from web documents skewed towards elementary science topics"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WaterlooFilteredV2Shard5
+        version = 1
+      }
+    },
+    {
+      name = "Web Corpus 3"
+      location = datastore
+      description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WaterlooFilteredV2Shard4
+        version = 1
+      }
+    },
+    {
+      name = "Web Corpus 4"
+      location = datastore
+      description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WaterlooFilteredV2Shard3
+        version = 1
+      }
+    },
+    {
+      name = "Web Corpus 5"
+      location = datastore
+      description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WaterlooFilteredV2Shard2
+        version = 1
+      }
+    },
+    {
+      name = "Web Corpus 6"
+      location = datastore
+      description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WaterlooFilteredV2Shard1
+        version = 1
+      }
+    },
+    {
+      name = "Web Corpus 7"
+      location = datastore
+      description = "A collection of ~51k sentences from web documents skewed towards elementary science topics"
+      item = {
+        type = directory
+        datastore = private
+        group = org.allenai.dictionary.indexes
+        name = WebSentences
+        version = 2
+      }
     }
   ]
 }
