Remove spaces from corpus names

--- a/src/main/resources/all-corpora.conf
+++ b/src/main/resources/all-corpora.conf
@@ -80,7 +80,7 @@ DictionaryToolWebapp = {
       }
     },
     {
-      name = "Web Corpus 1"
+      name = WebCorpus1
       location = datastore
       description = "A collection of ~1.5 million sentences from web documents skewed towards elementary science topics"
       item = {
@@ -92,7 +92,7 @@ DictionaryToolWebapp = {
       }
     },
     {
-      name = "Web Corpus 2"
+      name = WebCorpus2
       location = datastore
       description = "A collection of ~1.1 million sentences from web documents skewed towards elementary science topics"
       item = {
@@ -104,7 +104,7 @@ DictionaryToolWebapp = {
       }
     },
     {
-      name = "Web Corpus 3"
+      name = WebCorpus3
       location = datastore
       description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
       item = {
@@ -116,7 +116,7 @@ DictionaryToolWebapp = {
       }
     },
     {
-      name = "Web Corpus 4"
+      name = WebCorpus4
       location = datastore
       description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
       item = {
@@ -128,7 +128,7 @@ DictionaryToolWebapp = {
       }
     },
     {
-      name = "Web Corpus 5"
+      name = WebCorpus5
       location = datastore
       description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
       item = {
@@ -140,7 +140,7 @@ DictionaryToolWebapp = {
       }
     },
     {
-      name = "Web Corpus 6"
+      name = WebCorpus6
       location = datastore
       description = "A collection of ~5 million sentences from web documents skewed towards elementary science topics"
       item = {
@@ -152,7 +152,7 @@ DictionaryToolWebapp = {
       }
     },
     {
-      name = "Web Corpus 7"
+      name = WebCorpus7
       location = datastore
       description = "A collection of ~51k sentences from web documents skewed towards elementary science topics"
       item = {
