Remove db info from default application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -39,9 +39,13 @@ IkeToolWebapp = {
 
 Tablestore = {
   db = {
-    url = "jdbc:postgresql://okcorpus-dev.civm9kvdku8h.us-west-2.rds.amazonaws.com:5432/okcorpus"
-    user = "okcorpus"
-    password = "OnlyGoodParts"
+    // NOTE: Before running locally, uncomment the below lines and specify values for keys `url` to point to your PostgresSql JDBC 
+    // link, `user` and `password`.
+    // AI2 Internal users: use the database in the `test` deploy environment and the same username. You can get the password
+    // from this file in the ops-keystore in S3: https://s3-us-west-2.amazonaws.com/ops-keystore/database/ike/pgpass-test.sh.
+    // url =
+    // user =
+    // password =
   }
 }
 
