--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -42,7 +42,7 @@ Tablestore = {
     // NOTE: Before running locally, uncomment the below lines and specify values for keys `url` to point to your PostgresSql JDBC 
     // link, `user` and `password`.
     // AI2 Internal users: use the database in the `test` deploy environment and the same username. You can get the password
-    // from this file in the ops-keystore in S3: https://s3-us-west-2.amazonaws.com/ops-keystore/database/ike/pgpass-test.sh.
+    // from this file in the ops-keystore in S3.
     // url =
     // user =
     // password =
