Make ACL Docs Index available on public demo (#231)
* Make ACL Docs Index available on public demo, have only ACL index selected by default

* Reorder imports messed up by IntelliJ

* Adding defaultSelected to SearchApp

* Fix description

* Revert "Fix description"

This reverts commit da43aeafb704813be73d59306dc2ba6c63886259.

--- a/src/main/resources/all-corpora.conf
+++ b/src/main/resources/all-corpora.conf
@@ -7,7 +7,7 @@ IkeToolWebapp = {
       description = "All the ACL papers (about 20k). Indexed in memory or Saruman."
       item = {
         type = directory
-        datastore = private
+        datastore = public
         group = org.allenai.dictionary.indexes
         name = AclDocs
         version = 6
