Change ACL description (#232)
* Git ignore tsv and txt files

* Change description for ACL Docs.

--- a/src/main/resources/all-corpora.conf
+++ b/src/main/resources/all-corpora.conf
@@ -4,7 +4,7 @@ IkeToolWebapp = {
     {
       name = AclDocs
       location = datastore
-      description = "All the ACL papers (about 20k). Indexed in memory or Saruman."
+      description = "All the ACL papers (about 20k)."
       item = {
         type = directory
         datastore = public
